syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "com.cinematica.backend.example";

service TestService {
  rpc testRequestKotlin(SomeTestData) returns (SomeTestData);
}

message SomeTestData {
  string name = 1;
}